--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 											<div class="relative">
 											<div class="thumb">
 													<div class="overlay overlay-bg"></div>
-													 <img class="image img-fluid" src="img/dropout.png" alt="">
+													 <img class="image img-fluid" src="img/dropoutjpg.jpg" alt="">
 												</div>
 					<a href="https://towardsdatascience.com/dont-use-dropout-in-convolutional-networks-81486c823c16">
 						<div class="middle">
@@ -344,7 +344,7 @@
 											<div class="relative">
 												<div class="thumb">
 													<div class="overlay overlay-bg"></div>
-													 <img class="image img-fluid" src="img/sig4square.png" alt="">
+													 <img class="image img-fluid" src="img/sig4squarejpg.jpg" alt="">
 												</div>
 					<a href="https://towardsdatascience.com/intuit-and-implement-batch-normalization-c05480333c5b" target="_blank">
 						<div class="middle">
@@ -365,7 +365,7 @@
 												<div class="relative">
 													<div class="thumb">
 														<div class="overlay overlay-bg"></div>
-														 <img class="image img-fluid" src="img/hucklecover2.png" alt="">
+														 <img class="image img-fluid" src="img/hucklecover2jpg.jpg" alt="">
 													</div>
 						<a href="GAP">
 							<div class="middle">
@@ -427,7 +427,7 @@
 												<div class="relative">
 													<div class="thumb">
 														<div class="overlay overlay-bg"></div>
-														 <img class="image img-fluid" src="img/clustering.png" alt="">
+														 <img class="image img-fluid" src="img/clusteringjpg.jpg" alt="">
 													</div>
 						<a href="Clustering">
 							<div class="middle">
