--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 							<a href="#portfolio" class="primary-btn text-uppercase mb-20">My Projects</a>
 						</div>
 						<div class="col-lg-6 col-md-6 col-xs-6 banner-right d-flex align-self-center">
-							<img  class="img-fluid" src="img/harrison.png">
+							<img src="img/harrison.png" style="width:auto;">
 						</div>
 					</div>
 				</div>
@@ -217,7 +217,7 @@
 				<h4 class="text-center pt-50"> Devops </h4>
 				<div class="single-skill">
 					<p>
-						Server Management (Linux / Flask) -   3
+						Server Management (Linux / SSH) -   3
 					</p>
 					<div class="skill" data-width="60"></div>
 				</div>
@@ -305,17 +305,17 @@
 									</div>
 							</div>
 					</div>
-
+<!---
 							<div class="filters">
 									<ul>
-											<li data-filter="*">All</li>
+											<li class="active" data-filter="*">All</li>
 											<li data-filter=".ComputerVision">Computer Vision</li>
 											<li data-filter=".NLP">NLP</li>
 											<li data-filter=".WebApps">Web Apps</li>
 											<li data-filter=".DataScience">Data Science</li>
 									</ul>
 							</div>
-
+--->
 							<div class="filters-content">
 									<div class="row grid" style="height:865px;">
 
