--- a/index.html
+++ b/index.html
@@ -90,11 +90,17 @@
 							<br>
 
 							<blockquote class="generic-blockquote">
-								<p class="mt-14">I am a self-taught data scientist. Over the last 9 months, I left my job, started studying machine learning full time, and enrolled in a Master's Program in Computer Science.
-									I am doing all of this because my passion and goal is implementing machine learning applications in the real world. This means a strong understanding of predictive modeling and production environments.
-
-								</p><p> In the near future, I hope to get internship experience in the Tech Industry. So I can practice my craft alongside like-minded problem solvers.
-							</p>
+								<p class="fz-22">In the information age, anyone can learn anything if they have passion and dedication.</p>
+								<br>
+									<p class="fz-18"> At the beginning of 2018 I started teaching myself how to code in Python. Shortly thereafter, I left my corporate job,
+										 got a part-time job at a daycare, and started studying data-science and software engineering full time. My passion sustained
+										 me. I spent many night in front of a computer screen, studying coding tutorials and discussing on data-science forums.
+									 </p>
+								<p class="fz-18">
+									I still treat every day as an opportunity to learn something new. These days I am writing data-science tutorials on Medium.com.
+									I am also picking up contract positions as a freelance data-scientist.  My dream is to work with a team that is as passionate about technology as I am.
+									 That being said, in the next few months I hope to secure an internship positions at a tech startup.
+								</p>
 							</blockquote>
 							<a href="about" class="primary-btn text-uppercase">About me</a>
 
@@ -290,11 +296,98 @@
 	</section>
 
 
-<div class="container">
-	<hr>
-</div>
+<hr>
 
 
+
+
+<!-- Start recent-blog Area -->
+<section class="recent-blog-area section-gap">
+	<div class="container">
+		<div class="row justify-content-center">
+			<div class="col-md-8 pb-30 header-text">
+				<h1>My Latest Projects</h1>
+				<p>
+					Take a look at my recent work.
+				</p>
+			</div>
+		</div>
+		<div class="row">
+
+			<div class="single-recent-blog col-lg-4 col-md-4">
+				<div class="thumb">
+					<a href="https://github.com/harrisonjansma/Analyzing_Medium" target="_blank">
+					<img class="f-img img-fluid" src="img/medium2.jpg" alt="">
+				</a>
+				</div>
+				<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
+
+					<div class="meta">
+						Oct 10th, 2018
+					</div>
+				</div>
+				<a href="https://github.com/harrisonjansma/Analyzing_Medium" target="_blank">
+					<h4>Scraping 1.4 Million Medium Stories</h4>
+				</a>
+				<p>
+					I recently collected data from 1.4 million stories of Medium.com.<br><br> I used the data to make the first public analysis of Medium stories,
+					 to create a performance metric to fuel authors, and lastly I published the full dataset for Medium's community of data-scientists.
+				</p>
+			</div>
+
+			<div class="single-recent-blog col-lg-4 col-md-4">
+				<div class="thumb">
+					<a href="https://towardsdatascience.com/how-to-learn-data-science-if-youre-broke-7ecc408b53c7" target="_blank">
+					<img class="f-img img-fluid" src="img/brokecover.jpg" alt="">
+				</a>
+				</div>
+				<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
+					<div class="meta">
+						Sep 16th, 2018
+					</div>
+				</div>
+				<a href="https://towardsdatascience.com/how-to-learn-data-science-if-youre-broke-7ecc408b53c7" target="_blank">
+					<h4>How to Learn Data-Science</h4>
+				</a>
+				<p>
+					In this article, published in Towards Data Science and KDNuggets, I recount my months of self-study and gave advice and resources for the aspiring data-scientist.
+<br><br>
+					This article was the most shared story on KDNuggets for October. It was also well received on Medium.com, receiving 22k reads since publication and breaking the 99.9th percentile of claps for all Medium articles.
+				</p>
+			</div>
+
+
+
+			<div class="single-recent-blog col-lg-4 col-md-4">
+				<div class="thumb">
+					<a href="https://towardsdatascience.com/dont-use-dropout-in-convolutional-networks-81486c823c16" target="_blank">
+					<img class="f-img img-fluid mx-auto" src="img/dropoutcover.png" alt="">
+				</a>
+				</div>
+				<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
+
+					<div class="meta">
+						Aug 14th, 2018
+					</div>
+				</div>
+				<a href="https://towardsdatascience.com/dont-use-dropout-in-convolutional-networks-81486c823c16" target="_blank">
+					<h4>Don't Use Dropout in ConvNets</h4>
+				</a>
+				<p>
+					In this project I experimented with regularization in convolutional neural networks. I found that removing dropout layers increased
+					performance in image recognition tasks. <br><br> I published an article in Towards Data Science and KDNuggets detailing the experiment and my results.
+				</p>
+			</div>
+
+
+		</div>
+	</div>
+</section>
+<!-- end recent-blog Area -->
+
+
+
+<!---
 			<section class="portfolio-area section-gap" id="portfolio">
 					<div class="container">
 					<div class="row d-flex justify-content-center">
@@ -305,7 +398,7 @@
 									</div>
 							</div>
 					</div>
-<!---
+
 							<div class="filters">
 									<ul>
 											<li class="active" data-filter="*">All</li>
@@ -315,7 +408,7 @@
 											<li data-filter=".DataScience">Data Science</li>
 									</ul>
 							</div>
---->
+
 							<div class="filters-content">
 									<div class="row grid" style="height:865px;">
 
@@ -454,7 +547,10 @@
 					<a href="archive" class="primary-btn text-uppercase">Project Archive</a>
 				</div>
 			</section>
+			--->
 			<!-- End portfolio-area Area -->
+
+
 <hr>
 			<!-- Start price Area -->
 <section class="price-area section-gap">
@@ -483,7 +579,7 @@
 						<div class="col-lg-6 col-md-6 single-price">
 							<a href="https://medium.com/@harrisonjansma">
 							<div class="top-part">
-								<img src="img/medium.png" height=300 width=300>
+								<img src="img/medium3.jpg" height=300 width=300>
 								<h4>Medium</h4>
 								<p class="mt-10">All my life I have been an avid sci-fi and fantasy reader. Recently I have begun writing about my research, thoughts, and experiences. </p>
 							</div>
