Removed a page and image formatting

--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
 								</li>
 
 
-								<li><a href="contact">Contact</a></li>
 								<li><a href="HarrisonJansmaResume.pdf" class="genric-btn primary-border circle" target="_blank">Resume</a></li>
 								</ul>
 							</ul>
@@ -66,13 +65,13 @@
 
 							<h2 class="mt-10 mb-20">Harrison Jansma</h2>
 							<p>
-								Data scientist and machine learning engineer.
+								Contemplative coder and analyst, inspired by tough problems.
 							</p>
 
 							<a href="#portfolio" class="primary-btn text-uppercase mb-20">My Projects</a>
 						</div>
-						<div class="col-lg-6 col-md-6 col-xs-6 banner-right d-flex align-self-center">
-							<img src="img/harrison.png" style="width:auto;">
+						<div class="col-lg-6 col-md-6 col-xs-6 banner-right align-self-center">
+							<img src="img/harrison.png" style="width:auto;height:auto;max-width:100%;">
 						</div>
 					</div>
 				</div>
@@ -90,13 +89,13 @@
 							<br>
 
 							<blockquote class="generic-blockquote">
-								<p class="fz-22">In the information age, anyone can learn anything if they have passion and dedication.</p>
+								<p class="fz-18">In the information age, anyone can learn anything if they have passion and dedication.</p>
 								<br>
-									<p class="fz-18"> At the beginning of 2018 I started teaching myself how to code in Python. Shortly thereafter, I left my corporate job,
+									<p class="fz-16"> At the beginning of 2018 I started teaching myself how to code in Python. Shortly thereafter, I left my corporate job,
 										 got a part-time job at a daycare, and started studying data-science and software engineering full time. My passion sustained
 										 me. I spent many night in front of a computer screen, studying coding tutorials and discussing on data-science forums.
 									 </p>
-								<p class="fz-18">
+								<p class="fz-16">
 									I still treat every day as an opportunity to learn something new. These days I am writing data-science tutorials on Medium.com.
 									I am also picking up contract positions as a freelance data-scientist.  My dream is to work with a team that is as passionate about technology as I am.
 									 That being said, in the next few months I hope to secure an internship positions at a tech startup.
