--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
 								</li>
 
 
-								
+
 								<li><a href="HarrisonJansmaResume.pdf" class="genric-btn primary-border circle" target="_blank">Resume</a></li>
 								</ul>
 							</ul>
@@ -90,11 +90,10 @@
 
 
 						<div class="col-lg-12 pt-60">
-							<p>Nine months ago I was in a new city at a dead end job. After some serious self-reflection about my passions and interests, I committed to learning everything I could about machine learning, data science, and the tech industry. I built my own curriculum, a hodgepodge of hundreds of websites and forums, and committed between 4-6 hours each day to learn the basics.</p><p>
+							<p>At the beginning of 2018 I didn't know where my life was going. After some serious self-reflection about my passions and interests, I committed to learning everything I could about machine learning, data science, and the tech industry. I built my own curriculum, a hodgepodge of hundreds of websites and forums, and committed between 4-6 hours each day to learn the basics.</p><p>
 
-Fast forward to today where I have enrolled in an excellent computer science program. I now publish my own blog posts to help others learn about everything from data science to deep learning. I am excited by all the things I have learned over the last few months, and I love that I get to work on something I am passionate about each day.</p><p>
-
-However, I still have a long way to go. The next few months I will focus on teaching others and implementing machine learning models in real world production systems. I further hope to get internship experience so I can engage with other like-minded people and get more experience building intelligent systems for use in the real-world.</p>
+Fast forward to today, I am halfway through the computer science Masters program at the University of Texas at Dallas. I work as a data science freelancer building NLP models for research teams and businesses across the US. Lastly, I teach data science skills to enterprise professionals in a class room setting. Teaching skills like Python, predictive modelling, and data analytics</p>
+<p>In the Summer of 2019, I will be working for Sprint as a data science intern. I will be located at Sprint's global headquarters in Overland Park, KS.</p>
 
 
 						</div>
@@ -245,10 +244,37 @@ However, I still have a long way to go. The next few months I will focus on teac
 			        <h4>
 			          <time>Masters in Computer Science</time>
 			        </h4>
-			        <p><b>University of Texas at Dallas (Ongoing)</b></p>
-			        <p>Expected graduation: Fall 2019</p>
+			        <p><b>University of Texas at Dallas</b></p>
+			        <p>August 2018 - May 2020</p>
 			      </div>
 			    </li>
+					<li>
+					 <div class="content">
+						 <h4>
+							 <time>Freelance Data Scientist</time>
+						 </h4>
+						 <p><b>UpWork</b></p>
+						 <p>November 2018 - Current</p>
+					 </div>
+				 </li>
+				 <li>
+					 <div class="content">
+						 <h4>
+							 <time>Data Science Instructional Associate</time>
+						 </h4>
+						 <p><b>General Assembly</b></p>
+						 <p>March 2019 - Current</p>
+					 </div>
+				 </li>
+				 <li>
+					 <div class="content">
+						 <h4>
+							 <time>Data Science Intern (Upcoming)</time>
+						 </h4>
+						 <p><b>Sprint - Billing Systems</b></p>
+						 <p>May 2019 - August 2019</p>
+					 </div>
+				 </li>
 
 			  </ul>
 			</section>
@@ -282,9 +308,9 @@ However, I still have a long way to go. The next few months I will focus on teac
 											<a href="">How long have you been practicing machine learning?</a>
 										</dt>
 										<dd style="display: none;">
-										<p>I discovered machine learning a year ago after graduating from Baylor University. Since then I have immersed myself in data science communities on <a href="https://medium.com/">Medium</a> and across the web.</p>
+										<p>I discovered machine learning at the beginning of 2018 after graduating from Baylor University. Since then, I have immersed myself in data science communities on <a href="https://medium.com/">Medium</a> and across the web.</p>
 
-										<p>I have pushed myself to not only understand the theory behind machine learning, but also the constraints that productionizing artificial intelligence entails.</p>
+										<p>I have rich experience in building machine learning solutions for NLP tasks. I have built models to assist in sentiment analysis, demographic clustering, and topic modelling.</p>
 										</dd>
 
 										<dt>
@@ -297,29 +323,21 @@ However, I still have a long way to go. The next few months I will focus on teac
 
 
 										<dt>
-											<a href="">Why are you interested in computer vision / machine learning?</a>
+											<a href="">Why are you interested in NLP / machine learning?</a>
 										</dt>
 										<dd style="display: none;">
-											<p>I am curious by nature. Machine learning and computer vision are both excellent tools to understand the world better. </p>
-										<p>Despite the movement towards integrating AI into existing technologies, the implementation of machine learning (especially computer vision) is still in its infancy. This field is the wildwest, and I want to work with the pioneers and innovators that create new and amazing things.</p>
+											<p>I am curious by nature. Machine learning and natural language processing are both excellent tools to understand the world better. </p>
+										<p>Despite the hype over integrating AI into existing technologies, the implementation of machine learning (especially NLP) is still in its infancy. This field is the wildwest, and I want to work with the pioneers and innovators that create new and amazing things.</p>
 										</dd>
 
 
-										<dt>
-											<a href="">What industry are you looking to work in?</a>
-										</dt>
-										<dd style="display: none;">
-										<p>I am very interested in web application development. I think the best fit for me will be a career in the tech industry.</p>
-
-										<p> I am drawn towards the industry's focus on rapid improvement, innovation, and team-oriented creativity. Furthermore, I think when it comes to improving existing technologies there is a great deal of low-hanging fruit to be reached thanks to the movement towards microservice architecture and docker containerization. These developments make machine learning more integrable than ever.</p>
-										</dd>
-
+						
 
 									<dt>
 										<a href=""> What kind of work do you see yourself doing? </a>
 									</dt>
 									<dd style="display: none;">
-									<p>I am interested in building modular machine learning applications that can communicate with the back end architectures of existing applications.</p><p> Position titles that do this work are not well defined. I describe my perfect future position to be a mix of data science, machine learning engineering, and devops. Essentially a machine learning specialist with the skills to deploy a model application to production.</p>
+									<p>I am interested in building modular machine learning applications that can communicate with existing production systems.</p><p> Position titles that do this work are not well defined. I describe my perfect future position to be a mix of data science, machine learning engineering, and devops. Essentially a machine learning specialist with the skills to deploy a model to production.</p>
 									</dd>
 								</dl>
 
