--- a/index.html
+++ b/index.html
@@ -89,16 +89,17 @@
 							<br>
 
 							<blockquote class="generic-blockquote">
-								<p class="fz-18">In the information age, anyone can learn anything if they have passion and dedication.</p>
+								<p class="fz-18"><i>In the information age, anyone can learn anything if they have passion and dedication.</i></p>
 								<br>
 									<p class="fz-16"> At the beginning of 2018 I started teaching myself how to code in Python. Shortly thereafter, I left my corporate job,
 										 got a part-time job at a daycare, and started studying data-science and software engineering full time. My passion sustained
-										 me. I spent many night in front of a computer screen, studying coding tutorials and discussing on data-science forums.
+										 me. I spent many night in front of a computer screen, studying coding tutorials and discussing on data science forums.
 									 </p>
 								<p class="fz-16">
-									I still treat every day as an opportunity to learn something new. These days I am writing data-science tutorials on Medium.com.
-									I am also picking up contract positions as a freelance data-scientist.  My dream is to work with a team that is as passionate about technology as I am.
-									 That being said, in the next few months I hope to secure an internship positions at a tech startup.
+									I still treat every day as an opportunity to learn something new. Recently, I have started working as a data science freelancer for various research teams and businesses across the US. I am also pursuing a computer science Masters at the University of Texas at Dallas.
+								</p>
+								<p class="fz-16">
+									Over the next few months I will be interning at Sprint as a data scientist.
 								</p>
 							</blockquote>
 							<a href="about" class="primary-btn text-uppercase">About me</a>
@@ -136,10 +137,10 @@
 
 						<div class="col-lg-4 col-md-6">
 							<div class="single-services">
-								<span class="lnr lnr-eye"></span>
-								<a><h4>Computer Vision</h4></a>
+								<span class="lnr lnr-bubble"></span>
+								<a><h4>NLP</h4></a>
 								<p>
-									I build intelligent systems that use images and video data to understand, describe, and interact with the world.
+									I build intelligent systems that use text and speech data to understand, describe, and interact with people.
 								</p>
 							</div>
 						</div>
@@ -149,7 +150,7 @@
 								<span class="lnr lnr-graduation-hat"></span>
 								<a><h4>Machine Learning</h4></a>
 								<p>
-									I have a deep understanding of the mathematics and best practices that make machine learning applications successful.
+									I have a deep understanding of the theory, implementation, and best practices that make machine learning applications successful.
 								</p>
 							</div>
 						</div>
@@ -157,8 +158,8 @@
 
 						<div class="col-lg-4 col-md-6">
 							<div class="single-services">
-								<span class="lnr lnr-cloud-check"></span>
-								<a><h4>Cluster Computing</h4></a>
+								<span class="lnr lnr-layers"></span>
+								<a><h4>Parallel Computing</h4></a>
 								<p>
 									I am learning about horizontally scaled databases. I hope to implement these ideas soon.
 								</p>
@@ -167,18 +168,18 @@
 						<div class="col-lg-4 col-md-6">
 							<div class="single-services">
 								<span class="lnr lnr-laptop-phone"></span>
-								<a><h4>Web App Development</h4></a>
+								<a><h4>Model Deployment</h4></a>
 								<p>
-									I implement machine learning to make smarter internet-based applications.
+									I implement machine learning models in real world production systems using REST APIs.
 								</p>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="single-services">
-								<span class="lnr lnr-database"></span>
-								<a><h4>Backend Development</h4></a>
+								<span class="lnr lnr-cloud-check"></span>
+								<a><h4>Cloud Compute</h4></a>
 								<p>
-										I maintain my own DigitalOcean servers. I use them for database storage, model training, and model deployment.
+										I maintain DigitalOcean servers for database storage, model training, and model deployment.
 								</p>
 							</div>
 						</div>
