Resume Update July 2019

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 							<h2 class="mt-10 mb-20">Harrison Jansma</h2>
 							<p>
-								Contemplative coder and analyst, inspired by tough problems.
+								Contemplative coder and analyst. Inspired by tough problems.
 							</p>
 
 							<a href="#portfolio" class="primary-btn text-uppercase mb-20">My Projects</a>
